Fix spacing between nav and dashboard content in all dashboard views

--- a/client/extensions/woocommerce/app/dashboard/style.scss
+++ b/client/extensions/woocommerce/app/dashboard/style.scss
@@ -1,12 +1,7 @@
+.dashboard__manage-has-orders,
+.dashboard__manage-no-orders,
 .dashboard__setup-wrapper {
-	@include breakpoint( ">960px" ) {
-		padding: 32px;
-		margin-top: 58px;
-	}
-}
-
-.dashboard__manage-no-orders {
-	@include breakpoint( ">960px" ) {
+	@include breakpoint( ">660px" ) {
 		margin-top: 58px;
 	}
 }
